--- a/src/Horker.MXNet/config/common.config.json
+++ b/src/Horker.MXNet/config/common.config.json
@@ -87,6 +87,9 @@
     ],
     "DeprecationWarning": [
       "DeprecationWarning"
+    ],
+    "RuntimeWarning": [
+      "RuntimeWarning"
     ]
   }
 }
